[package]
name = "git-open-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.15"
url = "2.3.1"
ssh2-config = "0.1.3"
webbrowser = "0.8.2"
git-url-parse = "0.4.4"
clap = { version = "4.0.29", features = ["derive"] }
path-absolutize = "3.0.14"
shellexpand = "2.1.2"
log = "0.4.17"
clap-verbosity-flag = "2.0.0"
env_logger = "0.10.0"
